--- a/app/views/admin/emissions/_media_sociaux_form.html.erb
+++ b/app/views/admin/emissions/_media_sociaux_form.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div class="col-lg-6">
         <label>&nbsp;</label>
-        <button type="button" data-action="click->admin--emission-form#deleteMediaSociaux" class="btn btn-outline-danger btn-as-block"><%= t('admin.emissions.media_sociaux_form.delete_btn_label') %></button>
+        <button type="button" data-action="click->admin--emission-form#deleteMediaSociaux" class="btn btn-outline-danger btn-as-block"><%= t('admin.admin.delete_btn') %></button>
       </div>
     </div>
   </div>
