--- a/app/views/admin/emissions/_membre_equipe_form.html.erb
+++ b/app/views/admin/emissions/_membre_equipe_form.html.erb
@@ -13,7 +13,7 @@
       </div>
       <div class="col-lg-4">
         <label>&nbsp;</label>
-        <button type="button" data-action="click->admin--emission-form#deleteMembre" class="btn btn-outline-danger btn-as-block"><%= t('admin.emissions.membre_equipe_form.delete_btn_label') %></button>
+        <button type="button" data-action="click->admin--emission-form#deleteMembre" class="btn btn-outline-danger btn-as-block"><%= t('admin.shared.delete_btn') %></button>
       </div>
     </div>
   </div>
