--- a/app/views/admin/emissions/show.html.erb
+++ b/app/views/admin/emissions/show.html.erb
@@ -42,7 +42,7 @@
 
 <table class="table">
   <thead>
-    <th>Nom</th>
+    <th>Titre</th>
     <th>Date de diffusion</th>
     <th></th>
   </thead>
