add balado support

--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -19,9 +19,9 @@
             <li class="nav-item">
               <%= link_to t('nav.tags'), admin_tags_path, class: 'nav-link' %>
             </li>
-            <%# <li class="nav-item"> %>
-              <%#   <a class="nav-link" href="#">Balados</a> %>
-              <%# </li> %>
+            <li class="nav-item">
+              <%= link_to t('nav.balados'), admin_balados_path, class: 'nav-link' %>
+              </li>
             <li class="nav-item">
               <%= link_to t('nav.users'), admin_users_path, class: 'nav-link' %>
             </li>
