--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -12,7 +12,7 @@
           <%= link_to 'Programmation', programmation_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Balados</a>
+          <%= link_to 'Balados', balados_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to "Blog", blog_index_path, class: 'nav-link' %>
