Use header font for the brand name in the navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,10 @@ a {
   }
 }
 
+.ckia-title {
+  font-family: var(--header-font) !important;
+}
+
 .ckia-nav-bg {
   background-color: var(--medium-teal);
 }
