--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light ckia-nav-bg flex-shrink-0">
   <div class="container">
-    <a class="navbar-brand" href="/">CKIA - 88.3 FM</a>
+    <a class="navbar-brand ckia-title" href="/">CKIA - 88.3 FM</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
