set action btn font-weight to bold for better visibility

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,7 @@ a {
 .ckia-action-btn {
   background-color: var(--medium-pink);
   color: var(--light-pink);
+  font-weight: bold;
   &:hover {
     background-color: var(--light-pink);
     color: var(--medium-pink);
