--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,14 +1,16 @@
-<div class="row">
+<div class="row my-4">
   <div class="col-lg-6">
-    <h5>Actuellement en onde</h5>
-    <h3><%= @current_emission&.nom %></h3>
+    <h3 class="mb-3">Actuellement en onde</h3>
+    <h5><%= @current_emission&.nom %></h5>
     <%= link_to 'Écoutez en direct', lecteur_path, class: 'btn ckia-action-btn' %>
+
+    <p class="mt-3"><%= @current_emission&.description %></p>
   </div>
   <div class="col-lg-6">
-    <p><%= @current_emission&.description %></p>
+    <h3 class="mb-3">Dernier épisode de balado publié</h3>
+    <h5><%= @latest_balado_episode.titre %></h5>
+    <%= link_to "Écoutez l'épisode", balado_path(@latest_balado_episode.balado), class: 'btn ckia-action-btn' %>
+
+    <p class="mt-3"><%= @latest_balado_episode.description %></p>
   </div>
-</div>
-<div class="row">
-  <h5>Dernier épisode de podcast publié</h5>
-  <p><%= @latest_balado_episode %></p>
 </div>
