set the right color for the header

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 
 :root {
   --light-teal: #f0fdfa;
-  --medium-teal: #99f6e4;
+  --medium-teal: #26fdeb;
   --dark-teal: #0f766e;
   --light-pink: #fce7f3;
   --medium-pink: #f472b6;
