For now, use h5 for episode title like on the home page

--- a/app/views/balados/show.html.erb
+++ b/app/views/balados/show.html.erb
@@ -2,5 +2,5 @@
 
 <h3 class="text-decoration-underline mb-3">Tous les épisodes</h3>
 <% @balado.episodes.each do |episode| %>
-  <p class="fw-bold text-decoration-underline"><%= episode.titre %></p>
+  <h5><%= episode.titre %></h5>
 <% end %>
