--- a/app/views/admin/balado_episodes/_form.html.erb
+++ b/app/views/admin/balado_episodes/_form.html.erb
@@ -1,39 +1,46 @@
 <%= form_with model: [:admin, balado, episode], local: true do |form| %>
   <div class="row">
     <div class="col">
-      <%= form.label :titre, class: 'form-label' %>
+      <%= form.label :titre, t('admin.balado_episodes.form.titre'), class: 'form-label' %>
       <%= form.text_field :titre, class: 'form-control' %>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <%= form.label :description, class: 'form-label' %>
+      <%= form.label :short_description, t('admin.balado_episodes.form.short_description'), class: 'form-label' %>
+      <%= form.text_field :short_description, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <%= form.label :description, t('admin.balado_episodes.form.description'), class: 'form-label' %>
       <%= form.text_area :description, class: 'form-control' %>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <%= form.label :transcript, class: 'form-label' %>
+      <%= form.label :transcript, t('admin.balado_episodes.form.transcript'), class: 'form-label' %>
       <%= form.text_area :transcript, class: 'form-control' %>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <%= form.label :audio_url, class: 'form-label' %>
+      <%= form.label :audio_url, t('admin.balado_episodes.form.audio_url'), class: 'form-label' %>
       <%= form.url_field :audio_url, class: 'form-control' %>
+      <div class="form-text"><%= t('admin.balado_episodes.form.audio_url_secondary_text') %></div>
     </div>
     <div class="col">
-      <%= form.label :audio_file, class: 'form-label' %>
+      <%= form.label :audio_file, t('admin.balado_episodes.form.audio_file'), class: 'form-label' %>
       <%= form.file_field :audio_file, class: 'form-control' %>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <%= form.label :published_at, class: 'form-label' %>
+      <%= form.label :published_at, t('admin.balado_episodes.form.published_at'), class: 'form-label' %>
       <%= form.date_field :published_at, class: 'form-control' %>
     </div>
     <div class="col">
-      <%= form.label :status, class: 'form-label' %>
+      <%= form.label :status, t('admin.balado_episodes.form.status'), class: 'form-label' %>
       <%= form.select :status, BaladoEpisode.statuses.keys.map {|status| [t("admin.shared.status.#{status}"), status]}, {}, class: 'form-select' %>
     </div>
   </div>
