balado_episodes: use the new `short_description`

--- a/app/views/balados/show.html.erb
+++ b/app/views/balados/show.html.erb
@@ -2,6 +2,7 @@
 
 <% unless @latest_episode.nil? %>
   <h5><%= @latest_episode.titre %></h5>
+  <p><%= @latest_episode.short_description %></p>
 
   <% unless @other_episodes.empty? %>
     <h3 class="text-decoration-underline mb-3">Tous les épisodes</h3>
