--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -11,6 +11,6 @@
     <h5><%= @latest_balado_episode.titre %></h5>
     <%= link_to "Écoutez l'épisode", balado_path(@latest_balado_episode.balado), class: 'btn ckia-action-btn' %>
 
-    <p class="mt-3"><%= @latest_balado_episode.description %></p>
+    <p class="mt-3"><%= @latest_balado_episode.short_description %></p>
   </div>
 </div>
