Make custom fonts works

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -3,24 +3,24 @@
  **/
 @font-face {
   font-family: Raleway;
-  src: url(fonts/raleway/Raleway-Regular.ttf);
+  src: url(fonts/Raleway-Regular.ttf);
 }
 
 @font-face {
   font-family: Raleway;
-  src: url(fonts/raleway/Raleway-Bold.ttf);
+  src: url(fonts/Raleway-Bold.ttf);
   font-weight: bold;
 }
 
 @font-face {
   font-family: Raleway;
-  src: url(fonts/raleway/Raleway-Bold.ttf);
+  src: url(fonts/Raleway-Bold.ttf);
   font-style: italic;
 }
 
 @font-face {
   font-family: Raleway;
-  src: url(fonts/raleway/Raleway-BoldItalic.ttf);
+  src: url(fonts/Raleway-BoldItalic.ttf);
   font-weight: bold;
   font-style: italic;
 }
@@ -30,7 +30,7 @@
  **/
 @font-face {
   font-family: Novecento;
-  src: url(fonts/novecento/novecento-bold.ttf), url(fonts/novecento/novecento-bold.otf);
+  src: url(fonts/novecento-bold.ttf), url(fonts/novecento-bold.otf);
   font-weight: bold;
 }
 
