--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -42,3 +42,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: var(--header-font);
   font-weight: bold;
 }
+
+.body-font {
+  font-family: var(--body-font);
+}
